--- a/index.html
+++ b/index.html
@@ -1,21 +1,219 @@
-<html>
+<!DOCTYPE html>
+<html lang="en"><!-- Basic -->
 <head>
-    <title>Новогодний Тест ! 2025</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+    <!-- Site Metas -->
+    <title>Christmas - Responsive HTML5 Template</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Site Icons -->
+    <link rel="shortcut icon" href="#" type="image/x-icon"/>
+    <link rel="apple-touch-icon" href="#"/>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Pogo Slider CSS -->
+    <link rel="stylesheet" href="css/pogo-slider.min.css">
+    <!-- Site CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/custom.css">
+
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
-<body>
-<div>
-    <h1> ТЕСТ !</h1>
-    <!--    <h1>-->
-    <!--        Новогодний Тест-->
-    <!--    </h1>-->
-    <!--    <h2>Арина разгадай квест чтобы получить все подарки!</h2>-->
+<body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
+
+<!-- LOADER -->
+<div id="preloader">
+    <div class="loader">
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+</div><!-- end loader -->
+<!-- END LOADER -->
+
+<!-- Start header -->
+<header class="top-header">
+    <nav class="navbar header-nav navbar-expand-lg">
+        <div class="container justify-content-center">
+            <div class="navbar-brand text-center" href="index.html">
+                🎄 Новогодний Квест ! 🎄
+            </div>
+        </div>
+    </nav>
+</header>
+<!-- End header -->
+
+<!-- wish -->
+<div id="question-div" style="padding-bottom: 0;" class="d-inline">
+    <div class="about-a1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="title-box">
+                        <h2>Квест для Арины!</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div id="question-1" class="question">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="row align-items-center about-main-info">
+
+                            <div class="col-lg-6 col-md-6 col-sm-12 text_align_center">
+                                <p>Для того чтобы найти все подарки тебе надо будет расгадать <b>3</b> загадки</p>
+                                <button id="btn-start" class="btn btn-danger">Начать !</button>
+                            </div>
+
+                            <div class="col-lg-6 col-md-6 col-sm-12 text_align_center"
+                                 style="margin-top: 1.5rem!important">
+                                <div class="full">
+                                    <img class="img-responsive" src="images/w1.png" alt="#"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="question-sub-1" class="question">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="row align-items-center about-main-info">
+
+                            <div class="col-lg-6 col-md-6 col-sm-12 text_align_center">
+                                <p>Летели галки, сели на палки.
+                                    Сядут по одной — галка лишняя,
+                                    Сядут по две — палка лишняя.
+                                    Сколько было палок и сколько было галок?
+                                </p>
+                                3 палки , 4 галки
+                            </div>
+
+                            <div class="card-body">
+                                <div class="input-group input-group-sm mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroup-sizing-sm1-1">ПАЛКИ :</span>
+                                    </div>
+                                    <input id="answer-1-1" type="text" class="form-control" aria-label="Small"
+                                           aria-describedby="inputGroup-sizing-sm1-1">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroup-sizing-sm1-2">ГАЛКИ :</span>
+                                    </div>
+                                    <input id="answer-1-2" type="text" class="form-control" aria-label="Small"
+                                           aria-describedby="inputGroup-sizing-sm1-2">
+                                </div>
+
+                                <button id="btnCheckAnswer1" href="#" class="btn btn-success">Проверить!</button>
+                            </div>
+
+                            <div class="col-lg-6 col-md-6 col-sm-12 text_align_center"
+                                 style="margin-top: 1.5rem!important">
+                                <div class="full">
+                                    <img class="img-responsive" src="images/w1.png" alt="#"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="question-2" class="question">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="row align-items-center about-main-info">
+                            <div class="col-lg-6 col-md-6 col-sm-12 text_align_center">
+                                <p>Разгадай Ребус</p>
+                                <div class="card">
+                                    <img src="images/rebus.jpg" class="card-img-top" alt="...">
+                                    <i> <b>|</b> - количество букв которые надо убрать из слова </i>
+                                    <div class="card-body">
+                                        <div class="input-group input-group-sm mb-3">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text" id="inputGroup-sizing-sm">Ответ :</span>
+                                            </div>
+                                            <input id="answer-2" type="text" class="form-control" aria-label="Small"
+                                                   aria-describedby="inputGroup-sizing-sm">
+                                        </div>
+
+                                        <button id="btnCheckAnswer2" href="#" class="btn btn-success">Проверить!</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="question-3" class="question">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="row align-items-center">
+                            <iframe width="500" height="500" style="border:3px solid black; margin:auto; display:block"
+                                    frameborder="0" src="https://crosswordlabs.com/embed/2024-12-28-156"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div id="modal" class="modal" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div id="modal-content" class="modal-content text-white">
+                        <div class="modal-header">
+                            <h5 id="modal-title" class="modal-title text-white">Modal title</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div id="modal-body" class="modal-body">
+                            <p id="modal-prompt">Modal body text goes here.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
+
+<!-- wish us -->
+<!-- ALL JS FILES -->
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<!-- ALL PLUGINS -->
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/jquery.pogo-slider.min.js"></script>
+
+<script src="js/images-loded.min.js"></script>
+<script src="js/custom.js"></script>
+
 <script>
+
     var testNumber
-    document.addEventListener('DOMContentLoaded', function() {
-        console.log("asdasd")
-        alert("aaaaaaaa")
+    document.addEventListener('DOMContentLoaded', function () {
+
+        $('#btn-start').on('click', function (e) {
+            showQuestion("question-sub-1")
+        });
+        $('#btnCheckAnswer1').on('click', function (e) {
+            checkAnswer1()
+        });
+        $('#btnCheckAnswer2').on('click', function (e) {
+            checkAnswer2()
+        });
+
         const queryString = window.location.search;
         console.log(queryString);
         const urlParams = new URLSearchParams(queryString);
@@ -26,19 +224,60 @@
     });
 
 
-    function test1 () {
-        alert("test 1")
+    function test1() {
+        showQuestion('question-1')
     }
 
-    function test2 () {
-        alert("test 2")
+    function test2() {
+        showQuestion('question-2')
     }
 
     function test3() {
-        alert("test 3")
+        showQuestion('question-3')
     }
 
-    function switchTest (number) {
+    function checkAnswer1(){
+        let isCorrect = $('#answer-1-1').val() === '3'
+            && $('#answer-1-2').val() === '4'
+        if (isCorrect) {
+            showAlert(true, "Подсказка к 2 подарку")
+        }else{
+            showAlert(false, "Подумай еще раз 😉")
+        }
+    }
+
+    function checkAnswer2() {
+        let isCorrect = $("#answer-2").val().toUpperCase() === "ГИРЛЯНДА";
+        if (isCorrect) {
+            showAlert(true, "Подсказка к 3 подарку")
+        }else{
+            showAlert(false, "Подумай еще раз 😉")
+        }
+    }
+
+    function showAlert(isCorrect, prompt) {
+        let title = isCorrect ? `🎉 Правильный ответ ! 🎉` : `😟 Не правильный ответ 😟`;
+        $('#modal-title').html(title)
+        if (isCorrect) {
+            $('#modal-content').addClass('bg-success')
+            $('#modal-content').removeClass('bg-danger')
+        } else {
+            $('#modal-content').addClass('bg-danger')
+            $('#modal-content').removeClass('bg-success')
+        }
+        $('#modal-prompt').html(prompt)
+        $('#modal').modal('show')
+    }
+
+    function showQuestion(questionId) {
+        $('.question').removeClass('d-inline')
+        $('.question').addClass('d-none')
+        $(`#${questionId}`).removeClass('d-none')
+        $(`#${questionId}`).addClass('d-inline')
+
+    }
+
+    function switchTest(number) {
         switch (number) {
             case '1':
                 test1();
@@ -50,6 +289,10 @@
                 test3();
                 break;
         }
+    }
+
+    function btnListeners() {
+
     }
 
 
