--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div id="question-3" class="question d-none col-12">
                         <div class="col-lg-12 col-md-12 col-sm-12">
                             <div class="align-items-center text-center">
-                                <h3 class="text-primary">Вкиторина !</h3>
+                                <h3 class="text-primary">Викторина !</h3>
                                 <div class="form-group">
                                     <label>Картинка, фраза или видео, которые быстро становятся вирусными и отражают
                                         текущие тренды или юмор интернета.</label>
@@ -255,7 +255,7 @@
                                             <li class="list-group-item">2. Сколько было палок ?</li>
                                             <li class="list-group-item">3. Сколько букв надо было пропустить в ребусе ?
                                             </li>
-                                            <li class="list-group-item">4. Сколько было вопросов в Вкиторине ?</li>
+                                            <li class="list-group-item">4. Сколько было вопросов в Викторине ?</li>
                                         </ul>
                                     </div>
                                     <div class="container height-100 d-flex justify-content-center align-items-center">
